--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
   <section class="main-box">
     <!-- 左侧布局 -->
     <div class="left">
-      <div class="panel industry">
+      <div class="panel">
         <div class="content">
           <h2>柱形图-就业行业</h2>
-          <div class="chart"></div>
+          <div class="chart" id="industry"></div>
+        </div>
+        <div class="footer"></div>
+      </div>
+      <div class="panel">
+        <div class="content people">
+          <h2>
+            折线图-人员变化
+            <a href="javascript:;">2020</a>
+            <a href="javascript:;">2021</a>
+          </h2>
+          <div class="chart" id="people"></div>
         </div>
         <div class="footer"></div>
       </div>
       <div class="panel">
         <div class="content">
           <h2>柱形图-就业行业</h2>
-          <div class="chart"></div>
-        </div>
-        <div class="footer"></div>
-      </div>
-      <div class="panel">
-        <div class="content">
-          <h2>柱形图-就业行业</h2>
-          <div class="chart"></div>
+          <div class="chart" id="age"></div>
         </div>
         <div class="footer"></div>
       </div>
@@ -61,22 +65,22 @@
     <div class="right">
       <div class="panel">
         <div class="content">
-          <h2>柱形图-就业行业</h2>
-          <div class="chart"></div>
+          <h2>柱形图-前端技能</h2>
+          <div class="chart" id="fe"></div>
         </div>
         <div class="footer"></div>
       </div>
       <div class="panel">
         <div class="content">
-          <h2>柱形图-就业行业</h2>
-          <div class="chart"></div>
+          <h2>折线图-播放量</h2>
+          <div class="chart" id="play"></div>
         </div>
         <div class="footer"></div>
       </div>
       <div class="panel">
         <div class="content">
-          <h2>柱形图-就业行业</h2>
-          <div class="chart"></div>
+          <h2>饼形图-地区分布</h2>
+          <div class="chart" id="area"></div>
         </div>
         <div class="footer"></div>
       </div>
@@ -84,6 +88,7 @@
   </section>
   <script src="./static/js/flexible.js"></script>
   <script src="./static/js/echarts.min.js"></script>
+  <script src="./static/js/jquery.js"></script>
   <script src="./static/js/index.js"></script>
   <script>
     var t = null;
